# GLES30_Sample

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/gles30_sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CameraBase.h  Fsm.h  MatrixStack.h  MyMath.h  Shader.h  TaskBase.cpp  TaskBase.h  TaskSystem.cpp  TaskSystem.h  Test.h  Texture2D.cpp  Texture2D.h  Vertex.h  framework.h  native-lib.cpp
app/src/main/cpp/glm/gtx/: color_space.inl
app/src/main/java/com/example/gles30_sample/: MainActivity.kt  MyGLRenderer.kt  MyGLSurfaceView.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gles30_sample/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
